update function to save pdf file

--- a/invoice.html
+++ b/invoice.html
@@ -152,8 +152,8 @@
       </div>
     </div>
     <div class="print">
-      <button class="btn btn_print" id="btn_print" action="print">
-        Zapisz jako pdf
+      <button id="save-pdf" class="no-print btn btn_print">
+        Zapisz jako PDF
       </button>
     </div>
 
