update invoicesView list

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <button class="btn" type="submit">Zapisz i podgląd</button>
         <button class="btn" type="button">
-          <a href="invoices"> Przeglądaj faktury</a>
+          <a href="/invoices">Przeglądaj faktury</a>
         </button>
       </form>
     </div>
