--- a/invoice.html
+++ b/invoice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Faktura</title>
-    <link rel="stylesheet" href="../dist/css/style.min.css" />
+    <link rel="stylesheet" href="/dist/css/style.min.css" />
   </head>
   <body>
     <div class="invoice">
@@ -151,7 +151,7 @@
         <p>Podpis osoby upoważnionej do odbierania faktury</p>
       </div>
     </div>
-    <div class="print">
+    <div class="print" id="print">
       <button id="save-pdf" class="no-print btn btn_print">
         Zapisz jako PDF
       </button>
