--- a/invoices.html
+++ b/invoices.html
@@ -7,8 +7,20 @@
     <link rel="stylesheet" href="/dist/css/style.min.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="position: relative">
       <h1 class="invoice_list">Lista Faktur</h1>
+      <div class="menu" id="menu">
+  <div class="ico" id="icoMenu">
+    <div class="left1">/</div>
+    <div class="right1">\</div>
+  </div>
+  <ul id="menuUl">
+    <li><a href="/">Logowanie do systemu</a></li>
+    <li><a href="#">Lista faktur - pliki</a></li>
+    <li><a href="/invoices">Lista faktur</a></li>
+  </ul>
+</div>
+
       <!-- <div class="invoices-list">
         <ul>
           <% for(let i = 0; i < invoices.length; i++) { %>
@@ -78,6 +90,16 @@
       </div>
     </div>
 
-    <script src="../dist/js/script.min.js"></script>
+    <script src="/dist/js/script.min.js" defer></script>
+    <!-- <script>
+      const menuUl = document.getElementById("menuUl");
+      const icoMenu = document.getElementById("icoMenu");
+      function toggleMenu() {
+        menuUl.classList.toggle("show");
+      }
+      icoMenu.addEventListener("click", toggleMenu);
+    </script> -->
+
+    <script src="../dist/js/showMenu.min.js"></script>
   </body>
 </html>
